--- a/view/frontend/templates/checkout/subscribe.phtml
+++ b/view/frontend/templates/checkout/subscribe.phtml
@@ -8,7 +8,7 @@ $subscribe = $block->subscribeNewsletter();
     <form method="post" action="<?php echo $block->getNewsletterSubmitUrl(); ?>"
           id="svea-checkout-newsletter-form">
         <div class="fieldset comment">
-            <input type="checkbox" name="newsletter" value="1" <?php echo $subscribe ? 'checked="checked"' : ''; ?>
+            <input type="checkbox" name="newsletter" value="<?php echo $subscribe ? '1' : '0'; ?>" <?php echo $subscribe ? 'checked="checked"' : ''; ?>
                    id="newsletter" title="<?php echo __('Sign Up for Our Newsletter') ?>" class="checkbox"/>
             <label for="newsletter"><span class="tick"></span> <?php echo __('Sign Up for Our Newsletter') ?></label>
         </div>
