--- a/view/frontend/templates/iframe.phtml
+++ b/view/frontend/templates/iframe.phtml
@@ -1,15 +1,5 @@
 <div id="svea-checkout_svea">
     <div id="sveaOrderJS">
-        <script>
-
-            var checkoutOptions = {
-                checkoutKey: "<?php echo $block->getSveaCheckoutKey(); ?>", //[Required] Test or Live GUID with dashes
-                paymentId : "<?php echo $block->getSveaPaymentId(); ?>", //[required] GUID without dashes
-                containerId : "sveaOrderJS",
-                language: "<?php echo $block->getSveaLocale(); ?>",
-            };
-            var _sveaCheckout = new Svea.Checkout(checkoutOptions);
-
-        </script>
+        TODO LOAD IFRAME
     </div>
 </div>
