--- a/view/frontend/templates/iframe.phtml
+++ b/view/frontend/templates/iframe.phtml
@@ -1,5 +1,5 @@
 <div id="svea-checkout_svea">
-    <div id="sveaOrderJS">
-        TODO LOAD IFRAME
+    <div id="sveaIframeSnippet">
+        <?php echo $block->getIframeSnippet(); ?>
     </div>
 </div>
