--- a/view/frontend/templates/svea.phtml
+++ b/view/frontend/templates/svea.phtml
@@ -4,6 +4,6 @@
 
 /** @var $block Svea\Checkout\Block\Checkout */
 ?>
-<div id="sveaOrderJS">
-    TODO LOAD IFRAME
+<div id="sveaIframeSnippet">
+    <?php echo $block->getIframeSnippet(); ?>
 </div>
