confirmation and success

--- a/view/frontend/templates/success.phtml
+++ b/view/frontend/templates/success.phtml
@@ -11,11 +11,16 @@ $realId = $block->getRealOrderId();
         <?php
         $orderData = $block->getOrderById($realId);
         $orderItems = $block->getOrderItems($realId);
-        //var_dump($orderData);die;
         ?>
         <h1><?= __('Thank you! We have received your order.') ?></h1>
         <p><?php /* @escapeNotVerified */
             echo __('We\'ll email you an order confirmation with details and tracking info.') ?></p>
+
+
+        <div id="sveaIframeSnippet">
+            <?php echo $block->getIframeSnippet(); ?>
+        </div>
+
         <?php echo $block->getAdditionalInfoHtml() ?>
         <?php if ($orderData) : ?>
             <div class="order_inside">
