--- a/view/frontend/web/css/source/lib/slick-theme.less
+++ b/view/frontend/web/css/source/lib/slick-theme.less
@@ -37,14 +37,14 @@
     padding: 0;
     border: none !important;
     outline: none !important;
-    background: white;
+    background: #00aece;
     width: 30px;
     height: 30px;
     border-radius: 50%;
     box-shadow: 0 5px 5px 0 rgba(0,0,0,0.20) !important;
     &:hover, &:focus {
         outline: none;
-        background: white;
+        background: #00aece;
         color: transparent;
         &:before {
             opacity: @slick-opacity-on-hover;
