--- a/view/frontend/templates/checkout/cart/item/item.phtml
+++ b/view/frontend/templates/checkout/cart/item/item.phtml
@@ -66,7 +66,6 @@ $product = $_item->getProduct();
         $FormKey = $objectManager->get('Magento\Framework\Data\Form\FormKey');
         ?>
         <div class="qty" data-th="<?php echo $block->escapeHtml(__('Qty')); ?>">
-            <span class="remove-product"><span>&times;</span></span>
             <span class="qty">
                 <span class="input-number-decrement">-</span>
                 <input id="cart-<?php /* @escapeNotVerified */
@@ -111,5 +110,6 @@ $product = $_item->getProduct();
                     <?php echo $block->getRowTotalExclTaxHtml($_item); ?>
                 </span>
         <?php endif; ?>
+        <span class="remove-product"><span><?= __('Remove')?></span></span>
     </td>
 </tr>
