--- a/view/frontend/layout/svea_checkout_index_index.xml
+++ b/view/frontend/layout/svea_checkout_index_index.xml
@@ -120,6 +120,9 @@
                             <block class="Svea\Checkout\Block\Checkout" name="svea_checkout.shipping_address"
                                    as="shipping_address" template="Svea_Checkout::checkout/shipping/address.phtml"/>
                         </block>
+                        <!-- Leave a comment -->
+                        <block class="Svea\Checkout\Block\Checkout" name="svea.checkout.comment" as="comment"
+                               template="Svea_Checkout::checkout/comment.phtml"/>
                     </block>
                 </container>
                 <!-- CROSSSELL -->
