--- a/view/frontend/templates/sidebar.phtml
+++ b/view/frontend/templates/sidebar.phtml
@@ -18,6 +18,7 @@ $counter = $this->helper('\Magento\Checkout\Helper\Cart');
         </div>
     </div>
     <?php echo $block->getChildHtml('shipping'); ?>
+    <?php echo $block->getChildHtml('comment'); ?>
 </div>
 
 <span class="please-wait load indicator" id="review-please-wait" style="display: none;"
