--- a/view/frontend/web/css/source/lib/slick-theme.less
+++ b/view/frontend/web/css/source/lib/slick-theme.less
@@ -41,7 +41,7 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.20) !important;
+    box-shadow: none !important;
     &:hover, &:focus {
         outline: none;
         background: #00aece;
