--- a/view/frontend/templates/checkout/shipping/method.phtml
+++ b/view/frontend/templates/checkout/shipping/method.phtml
@@ -7,8 +7,8 @@
 //id  #svea-checkout_shipping_method is mandatory
 
 ?>
-<div id="svea-checkout_shipping_method" >
-    <div class="shipping-method-holder">
+<div id="svea-checkout_shipping_method" style="display: none">
+    <div class="shipping-method-holder" >
 
 
         <?php if ($groups = $block->getShippingRateGroups()): ?>
