--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -4,7 +4,8 @@
 @svea-font-family: 'Asap';
 @svea-color-blue: #00325c;
 @svea-light-blue: #00aece;
-@svea-color-light-grey: #E5E5E5;
+@svea-hover-blue: #00839b;
+@svea-color-light-grey: #F4F4F4;
 @svea-color-dark-grey: #979797;
 @svea-color-white: #FFFFFF;
 @svea-color-black: #000000;
@@ -28,8 +29,8 @@
   font-weight: bold;
 
   &:hover {
-    background: @svea-light-blue;
-    border-color: @svea-light-blue;
+    background: @svea-hover-blue;
+    border-color: @svea-hover-blue;
     box-shadow: none;
   }
 }
@@ -165,7 +166,18 @@
 
     &[type='radio'] {
       .radio;
-      .checkbox;
+      + label:after {
+        content: none;
+      }
+
+      &:checked + label:after {
+        content: url("../images/check.svg");
+        padding-top: 1px;
+        left: 0;
+      }
+      &:checked + label:before {
+        display: none;
+      }
     }
   }
 
@@ -184,6 +196,7 @@
         .fieldset {
           position: relative;
           display: flex;
+          padding: 0 30px;
 
           .field {
             flex: 1;
@@ -197,7 +210,7 @@
 
           .actions-toolbar {
             .action.apply.primary, .action.cancel.primary {
-              &, &:hover {
+              & {
                 background: @svea-light-blue;
                 border-color: @svea-light-blue;
                 height: 50px;
@@ -205,6 +218,11 @@
                 border-top-left-radius: 0 !important;
                 border-radius: 7px;
                 margin: 0;
+
+                &:hover {
+                  background: @svea-hover-blue;
+                  border-color: @svea-hover-blue;
+                }
               }
             }
           }
@@ -252,6 +270,14 @@
 
   a {
     color: @svea-light-blue;
+  }
+}
+
+.svea-comment-title {
+  h4 {
+    color: @svea-color-blue;
+    padding-top: 20px;
+    font-size: 18px;
   }
 }
 
@@ -421,6 +447,8 @@ table {
       text-align: center;
       margin-bottom: 0;
       margin-top: 30px;
+      border-bottom: @svea-border;
+      padding-bottom: 20px;
     }
 
     .svea-products-grid {
@@ -453,20 +481,37 @@ table {
     }
   }
 }
+
 #svea_comment {
   max-width: 660px;
   margin: 0 auto 25px;
+
   #svea-checkout-comment {
+    margin: 0 30px;
+    padding: 0 20px;
     background: @svea-color-light-grey;
     border-radius: 7px;
+
     textarea {
       border: none;
     }
+
+    .actions-toolbar > .primary {
+      width: 100%;
+      margin: 20px auto;
+    }
+
+    button {
+      .svea-btn;
+      width: 100%;
+      height: 50px;
+      font-size: 18px;
+    }
   }
 }
+
 .svea-checkout-shipping {
   padding-bottom: 25px;
-  border-bottom: @svea-border;
   max-width: 660px;
   margin: 0 auto 25px;
 
@@ -479,23 +524,59 @@ table {
     margin: 0;
 
     .svea-checkout-radio-row {
-
-
-      &:hover {
-
-      }
+      padding: 20px 30px;
+      border-bottom: @svea-border;
 
       input[type='radio'] {
-
+        margin: 0 20px 0 0;
+        display: none;
       }
 
-      span > * {
+      span  {
+        position: relative;
+      }
 
+      label {
+        font-size: 16px;
+        color: @svea-color-blue;
+        display: flex;
+        cursor: pointer;
+        padding-left: 40px;
+        &:after {
+          background: transparent;
+          text-align: center;
+          left: 0;
+          position: absolute;
+          content: '';
+          display: inline-block;
+          pointer-events: none;
+          box-sizing: inherit;
+          height: 20px;
+          width: 20px;
+        }
+        &:before {
+          box-sizing: inherit;
+          position: absolute;
+          content: '';
+          display: inline-block;
+          pointer-events: none;
+          top: 1px;
+          left: 0;
+          height: 16px;
+          width: 16px;
+          border: 2px solid @svea-color-blue;
+          border-radius: 20px;
+        }
       }
 
       .price {
-        .svea-heading;
-        display: block;
+        font-weight: 500;
+        font-size: 16px;
+        float: right;
+        cursor: pointer;
+        flex-grow: 1;
+        text-align: right;
+        color: @svea-color-blue;
       }
     }
   }
@@ -562,6 +643,18 @@ button:not(.primary).svea-primary {
       .svea-heading;
       padding-top: 40px;
     }
+  }
+}
+
+.svea-checkout-title {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+
+  h4 {
+    border-bottom: @svea-border;
+    padding-bottom: 20px;
+    .svea-heading;
   }
 }
 
@@ -651,26 +744,17 @@ button:not(.primary).svea-primary {
       }
     }
   }
-
-  .svea-checkout-title {
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    h4 {
-      border-bottom: @svea-border;
-      padding-bottom: 20px;
-      .svea-heading;
-    }
-  }
   //   Shipping
   //  _____________________________________________
   .svea-checkout-shipping {
     padding-bottom: 25px;
-    border-bottom: @svea-border;
+
+    .shipping-method-holder {
+    }
 
     #svea-checkout_shipping_method {
       margin-top: 20px;
-      padding-top: 20px;
+      padding-top: 0;
       border-top: @svea-border;
     }
 
@@ -744,8 +828,7 @@ button:not(.primary).svea-primary {
       padding: 45px 35px 25px;
     }
   }
-  .svea-checkout-section-shipping,
-  .svea-checkout-section-content {
+  .svea-checkout-section-shipping {
     margin: 0 30px;
   }
 }
