--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -470,10 +470,15 @@ table {
 
           .product-item-info {
             width: 100%;
+            border: @svea-border;
+            border-radius: 7px;
           }
 
           .product-item-details {
             padding-bottom: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: left;
           }
         }
       }
